[tool.poetry]
name = "mingpt"
version = "3.3.3"
description = "A PyTorch re-implementation of GPT, both training and inference. minGPT tries to be small, clean, interpretable and educational."
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
transformers = "^4.20.1"

[tool.poetry.scripts]
adder = "projects.adder.adder:cmd"
chargpt = "projects.chargpt.chargpt:cmd"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
